--- a/main.html
+++ b/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Roman Numeral Converter</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-   </script>
-
+  <div class="container">
+    <h1>Convert Number to Roman Numerals</h1>
+    <input type="number" id="numberInput" placeholder="Enter a number (0 - 100000)" />
+    <button onclick="convertToRoman()">Convert</button>
+    <div id="output"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
