--- a/main.html
+++ b/main.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Roman Numeral Converter</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Convert Number to Roman Numerals</h1>
-    <input type="number" id="numberInput" placeholder="Enter a number (0 - 100000)" />
-    <button onclick="convertToRoman()">Convert</button>
-    <div id="output"></div>
+    <h1>Roman Numeral Converter</h1>
+
+    <label for="numberInput">Enter a number (1 - 100000):</label>
+    <input type="number" id="numberInput" min="1" max="100000" placeholder="e.g. 798">
+
+    <button onclick="convertNumber()">Convert</button>
+
+    <div class="result" id="result"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
