--- a/main.html
+++ b/main.html
@@ -8,15 +8,8 @@
 <body>
   <div class="container">
     <h1>Roman Numeral Converter</h1>
-
-    <label for="numberInput">Enter a number (1 - 100000):</label>
-    <input type="number" id="numberInput" min="1" max="100000" placeholder="e.g. 798">
-
-    <button onclick="convertNumber()">Convert</button>
-
-    <div class="result" id="result"></div>
+    <div id="result"></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
