--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 <body>
   <div class="container">
     <h1>Roman Numeral Converter</h1>
-    <div id="result"></div>
+    <input type="number" id="numberInput" placeholder="Enter a number (1 - 100000)" min="0" max="100000">
+    <button onclick="convertToRoman()">Convert</button>
+    <p id="result"></p>
   </div>
   <script src="script.js"></script>
 </body>
