--- a/main.html
+++ b/main.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Roman Numeral Converter</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <div class="container">
-    <h1>Roman Numeral Converter</h1>
+    <h2>Roman Numeral Converter</h2>
+    <input type="number" id="numberInput" placeholder="Enter a number" />
+    <button onclick="convertToRoman()">Convert</button>
     <div id="result"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
