--- a/main.html
+++ b/main.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Roman Numeral Converter</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div class="container">
-    <h2>Roman Numeral Converter</h2>
-    <input type="number" id="numberInput" placeholder="Enter a number" />
-    <button onclick="convertToRoman()">Convert</button>
-    <div id="result"></div>
+    <h1>Integer to Roman Numeral Converter</h1>
+    <input type="number" id="numberInput" placeholder="Enter a number" min="1" />
+    <button onclick="convert()">Convert</button>
+    <p id="result"></p>
   </div>
 
   <script src="script.js"></script>
