--- a/main.html
+++ b/main.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Roman Numeral Converter</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Integer to Roman Numeral Converter</h1>
-    <input type="number" id="numberInput" placeholder="Enter a number" min="1" />
+    <h1>Roman Numeral Converter</h1>
+    <input type="number" id="numberInput" placeholder="Enter a number (1 - 3999)" />
     <button onclick="convert()">Convert</button>
     <p id="result"></p>
   </div>
